--- a/index.html
+++ b/index.html
@@ -162,6 +162,25 @@
                             </div>
                 </div>
 
+
+
+                <div class="electrons-box" data-tilt data-tilt-max="20"
+                data-tilt-speed="700" data-tilt-perspective="900"
+                data-scroll data-scroll-speeed="-1"
+                data-scroll-direction="horizontal">
+                    <div class="electrons-group">
+                    <h4>Electrons In Each Shells</h4>
+                    <div class="electrons" id="electrons">1</div>
+                </div>
+                <div class="valency-group">
+                    <h4>Valency</h4>
+                    <div class="valency-no" id="valency-no">1</div>
+                </div>
+                </div>
+
+
+
+
                 <div class="group3">
                     <div class="box" id="21">
                         <h1>Sc</h1>
